--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
     "firebase/": "https://esm.sh/firebase@^12.6.0/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.2.7"
+    "vite": "https://esm.sh/vite@^7.2.7",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
